Tue Aug  4 11:34:46 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htlib/Configuration.cc: Added fix by Philippe Rochat
	<prochat@lbdsun.epfl.ch> to remove whitespace after config
	options.

Mon Aug  3 16:50:46 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

       * htsearch/ResultList.cc, htnotify/htnotify.cc,
        htmerge/htmerge.cc, htmerge/docs.cc, htlib/String.cc,
        htlib/ParsedString.cc, htfuzzy/Substring.cc,
        htfuzzy/Prefix.cc, htfuzzy/Exact.cc,
        htdig/SGMLEntities.cc, htdig/Retriever.cc, htdig/PDF.cc,
        htdig/HTML.cc, htdig/Document.cc:
        Fixed compiler warnings under -Wall

Mon Aug  3 05:56:23 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/Display.cc: Spelling correction for "ellipses"

Thu Jul 23 12:14:34 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/PDF.cc, htdig/PDF.h, htdig/Document.cc: Added files (and
	patch) from Sylvain Wallez for PDF parsing. Incorporates fix for
	non-Adobe PDFs.

	* htcommon/defaults.cc: Removed .pdf extension from bad_extensions.

Wed Jul 22 10:04:31 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/Display.cc: Added patch from Sylvain Wallez
	<s.wallez.alcatel@e-mail.com> to use the filename if no title is found.

	* htnotify/htnotify.cc: Added patch from Chris Jason
	Richards <richards@cs.tamu.edu> to fix problems with sendmail.

Tue Jul 21 09:56:58 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/Display.cc:	Added patch by Rob Stone
	<rob@psych.york.ac.uk> to create new environment variables to
	htsearch: SELECTED_FORMAT and SELECTED_METHOD.

Sun Jul 19 09:51:47 1998  Andrew Scherpbier  <andrew@contigo.com>

	* configure.in (berkeley db stuff): Added the berkeley db .tar.gz
 	to the distribution and modified configure.in to extract it if it
	needs to.

Thu Jul  9 09:39:01 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/Server.cc, htdig/Retriever.h, htdig/Retriever.cc,